--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "web-portfolio",
   "version": "1.0.0",
+  "description": "web page ",
   "main": "index.js",
   "homepage": "https://github.io/CaptainCrazyyy/web-portfolio",
-  "description": "web page ",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "gh-pages": "^2.1.1"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CaptainCrazyyy/web-portfolio.git"
