--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "gh-pages": "^2.1.1"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CaptainCrazyyy/web-portfolio.git"
@@ -20,5 +19,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/CaptainCrazyyy/web-portfolio/issues"
-  }
+  },
+  "devDependencies": {}
 }
