--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/CaptainCrazyyy/web-portfolio.git"
   },
-  "author": "Jared Ibañ",
+  "author": "Jared Ibañez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/CaptainCrazyyy/web-portfolio/issues"
